# cFS_Project_Reckoning

apps/fswv1/: BMP280_CFS_APP_GUIDE.md  CFS_INTEGRATION_GUIDE.md  CHANGES_SUMMARY.md  CHANGES_UART_TELEMETRY.md  CMakeLists.txt  GPIO_PERMISSIONS_GUIDE.md  GPIO_QUICK_FIX.md  INSTALL.md  INSTALL_SIMPLE.txt  LED_CONTROL_GUIDE.md  LIBGPIOD_GUIDE.md  MESSAGE_ID_REFERENCE.md  PACKAGE_SUMMARY.md  PYTHON_README.md  PYTHON_SCRIPTS_GUIDE.md  README_ENHANCED.md  README_OLD.md  TESTING_GUIDE.md  UART_PINOUT_REFERENCE.md  UART_TELEMETRY_GUIDE.md  UART_TELEMETRY_QUICK_REF.md  UART_TROUBLESHOOTING.md  UDP_RECEIVER_GUIDE.md  bmp280_cmd_test.py  cfe_es_startup.scr  debug_uart.sh  find_msgid.py  fswv1_cmd_test.py  setup_gpio.sh  simple_cmd.py  target_config.cmake  uart_telemetry_receiver.py  uart_test.c  uart_test_sender.py  uart_to_udp_binary.py  uart_to_udp_bridge.py  uart_to_udp_simple.py  udp_receiver_advanced.py  udp_telemetry_receiver.py
apps/fswv1/eds/: bmp280_app.xml
apps/fswv1/fsw/inc/: fswv1_app.h  fswv1_app_msg.h  fswv1_app_msgids.h  fswv1_app_version.h
apps/fswv1/fsw/src/: fswv1_app.c  fswv1_gpio.c  fswv1_sensor.c  fswv1_uart.c  fswv1_uart_telemetry.c
